kubernetes/infrastructure/ovumcy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovumcy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ovumcy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
